# code-gen-agent

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
docs/: commands.md  prompt_history.md  tech_note.md
examples/: CMakeLists.txt
examples/cmake/: clang.cmake  gcc.cmake
examples/docs/: door_lock.md  items.md  specification_format.md
examples/src/: CMakeLists.txt
examples/src/body_app/: CMakeLists.txt  doorlock_childlock_control.c  doorlock_childlock_control.h  doorlock_control.c  doorlock_control.h  main.c  udp_receiver.c  udp_receiver.h
examples/src/brake_app/: CMakeLists.txt  main.c  speed_generator.c  speed_generator.h  udp_sender.c  udp_sender.h
examples/src/cmake/: clang.cmake  gcc.cmake
examples/tests/: CMakeLists.txt  test_doorlock_control.cpp
src/gen_code/: main.py
src/gen_code/code_gen_agent/: agent.py
src/gen_code/code_gen_agent/code_builder_agent/: agent.py  prompt.py  tools.py
src/gen_code/code_gen_agent/code_refactorer_agent/: agent.py  prompt.py
src/gen_code/code_gen_agent/code_reviewer_agent/: agent.py  prompt.py
src/gen_code/code_gen_agent/code_writer_agent/: agent.py  prompt.py
src/gen_code/code_gen_agent/common/: callback_utils.py  config.py  constants.py  gen_file.py  models.py
src/gen_code/code_gen_agent/test_runner_agent/: agent.py  prompt.py  tools.py
src/gen_code/code_gen_agent/test_writer_agent/: agent.py  prompt.py  tools.py
src/gen_code/common/: constants.py
src/gen_code/weather_agent/: agent.py  tools.py
src/gen_code/weather_agent/tests/: test_agent.py  test_tools.py
tools/: setup.sh
